# grafiti

./: .gitignore  Makefile  README.rst  pyproject.toml  setup.py
docs/: conf.py  grafiti.rst  index.rst  modules.rst  welcome.rst
grafiti/: __init__.py  grafiti.py
tests/: test_ai.py  test_simplest.py
