[tool.poetry]
name = "grafiti"
version = "0.1.0"
description = "Automatic graph-based dependency resolution"
authors = ["Shiv Dhar <shivdhar@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
